<resources>
    <string name="app_name">Firebase App</string>
    <string name="home_page">Firebase: Home Page</string>
    <string name="hint_email">Please enter your Email ID</string>
    <string name="hint_username">Please enter your Username</string>
    <string name="hint_password">Please enter your Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="signup_success">Sign up is successful!</string>
    <string name="signup_failure">Unable to sign up\nPlease try again</string>
    <string name="signin_success">Sign in is successful!</string>
    <string name="signin_failure">Unable to sign in\nPlease try again</string>
    <string name="logout">LOG OUT</string>
    <string name="welcome">Welcome!</string>
    <string name="users">Users</string>
    <string name="img_upload_failure">Error: could not upload image\nPlease try again</string>
    <string name="img_upload_success">Image uploaded successfully!</string>
    <string name="img_warning">Please select the image to be uploaded</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="hint_message">Send a message...</string>
    <string name="share_image">SHARE IMAGE</string>
    <string name="share_success">Image has been shared!</string>
    <string name="share_failure">Unable to share image\nPlease try again</string>
    <string name="view_shared_posts">View shared posts</string>
    <string name="view_posts_title">These users have shared posts with you:</string>
    <string name="delete_post">Delete this post</string>
    <string name="delete_post_message">Are you sure you want to delete this post?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="post_deleted">Post has been deleted</string>
</resources>