<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SocialMediaActivity"
        android:onClick="hideKeyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/welcome"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textsize"
            android:textColor="@color/white"
            android:background="@color/primaryDarkColor"/>

        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@drawable/image"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:alpha="0.5"/>

        <Button
            android:id="@+id/btnShareImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_image"
            android:textSize="@dimen/textsize"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"/>

        <LinearLayout
            android:id="@+id/ll_Users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:textSize="@dimen/textsize"
                android:padding="@dimen/padding"
                android:textColor="@color/white"
                android:background="@color/primaryDarkColor"/>

            <EditText
                android:id="@+id/edtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:imeOptions="flagNoExtractUi" />

            <ListView
                android:id="@+id/listview_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"/>

        </LinearLayout>

    </LinearLayout>